--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -291,7 +291,7 @@
               <div class="btn-group dropdown m-1" uib-dropdown="">
                 <button id="btnSnapshot" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="bi bi-laptop"></i>
-                    New Devices Real
+                    New Devices Placeholders
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="btnSnapshot">
                   <li>
@@ -301,7 +301,7 @@
                     <a href="{{ url_for('inventory.upload_placeholder') }}" class="dropdown-item">
                     {% endif %}
                       <i class="bi bi-upload"></i>
-                      Upload Placeholder Spreadsheet
+                      Upload Spreadsheet
                     </a>
                   </li>
                   <li>
@@ -311,7 +311,7 @@
                     <a href="{{ url_for('inventory.device_add') }}" class="dropdown-item">
                     {% endif %}
                       <i class="bi bi-plus"></i>
-                      Create a new Placeholder
+                      Create a new
                     </a>
                   </li>
                 </ul>
@@ -320,7 +320,7 @@
               <div class="btn-group dropdown m-1" uib-dropdown="">
                 <button id="btnSnapshot" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="bi bi-laptop"></i>
-                    New Devices Abstract
+                    New Devices Snapshot
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="btnSnapshot">
                   <li>
@@ -330,7 +330,7 @@
                     <a href="{{ url_for('inventory.upload_snapshot') }}" class="dropdown-item">
                     {% endif %}
                       <i class="bi bi-upload"></i>
-                      Upload Snapshot files
+                      Upload files
                     </a>
                   </li>
                 </ul>
