--- a/ereuse_devicehub/templates/inventory/search.html
+++ b/ereuse_devicehub/templates/inventory/search.html
@@ -201,7 +201,7 @@
               <div class="btn-group dropdown m-1" uib-dropdown="">
                 <button id="btnSnapshot" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="bi bi-laptop"></i>
-                    New Device Real
+                    New Device Placeholder
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="btnSnapshot">
                   <li>
@@ -211,7 +211,7 @@
                     <a href="{{ url_for('inventory.upload_placeholder') }}" class="dropdown-item">
                     {% endif %}
                       <i class="bi bi-upload"></i>
-                      Upload Placeholder Spreadsheet
+                      Upload Spreadsheet
                     </a>
                   </li>
                   <li>
@@ -221,7 +221,7 @@
                     <a href="{{ url_for('inventory.device_add') }}" class="dropdown-item">
                     {% endif %}
                       <i class="bi bi-plus"></i>
-                      Create a new Placeholder
+                      Create a new
                     </a>
                   </li>
                 </ul>
@@ -230,7 +230,7 @@
               <div class="btn-group dropdown m-1" uib-dropdown="">
                 <button id="btnSnapshot" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="bi bi-laptop"></i>
-                    New Device Abstract
+                    New Device Snapshot
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="btnSnapshot">
                   <li>
@@ -240,7 +240,7 @@
                     <a href="{{ url_for('inventory.upload_snapshot') }}" class="dropdown-item">
                     {% endif %}
                       <i class="bi bi-upload"></i>
-                      Upload Snapshot files
+                      Upload files
                     </a>
                   </li>
                 </ul>
