--- a/ereuse_devicehub/templates/inventory/unbinding.html
+++ b/ereuse_devicehub/templates/inventory/unbinding.html
@@ -26,8 +26,8 @@
                       <thead>
                           <tr class="text-center">
                               <th scope="col">Basic Data</th>
-                              <th scope="col">Info Abstract device</th>
-                              <th scope="col">Info Real device</th>
+                              <th scope="col">Info Snapshot device</th>
+                              <th scope="col">Info Placeholder device</th>
                           </tr>
                       </thead>
                       <tbody>
@@ -111,8 +111,8 @@
                   <table class="table table-hover">
                       <thead>
                           <tr class="text-center">
-                              <th scope="col">Info Abstract device</th>
-                              <th scope="col">Info Real device</th>
+                              <th scope="col">Info Snapshot device</th>
+                              <th scope="col">Info Placeholder device</th>
                           </tr>
                       </thead>
                       <tbody>
@@ -132,13 +132,13 @@
                   {% if placeholder.device.manual_actions or placeholder.binding.manual_actions %}
                   <h2>Actions</h2>
                   <p>
-                      The actions will become real device and will no longer be in the abstract
+                      The actions will become placeholder device and will no longer be in the placeholder
                   </p>
                   <table class="table table-hover">
                       <thead>
                           <tr class="text-center">
-                              <th scope="col">Info Abstract device</th>
-                              <th scope="col">Info Real device</th>
+                              <th scope="col">Info Snapshot device</th>
+                              <th scope="col">Info Placeholder device</th>
                           </tr>
                       </thead>
                       <tbody>
@@ -161,13 +161,13 @@
                   {% if placeholder.device.tags %}
                   <h2>Tags</h2>
                   <p>
-                      The tags will become real device and will no longer be in the abstract
+                      The tags will become placeholder device and will no longer be in the placeholder
                   </p>
                   <table class="table table-hover">
                       <thead>
                           <tr class="text-center">
-                              <th scope="col">Info Abstract device</th>
-                              <th scope="col">Info Real device</th>
+                              <th scope="col">Info Snapshot device</th>
+                              <th scope="col">Info Placeholder device</th>
                           </tr>
                       </thead>
                       <tbody>
