add view for list of hdd eraseds

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -256,6 +256,14 @@
           </ul>
     </li><!-- End Temporal Lots Nav -->
 
+    <li class="nav-heading">Others views</li>
+
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="{{ url_for('inventory.device_erasure_list') }}">
+        <i class="bi bi-tag"></i><span>Data Storage Erasures</span>
+      </a>
+    </li><!-- End Other views -->
+
     <li class="nav-heading">Unique Identifiers (Tags)</li>
 
     <li class="nav-item">
