--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -437,7 +437,7 @@
                       <td>{% if dev.status %}{{ dev.status.type }}{% endif %}</td>
                       <td>{% if dev.allocated_status %}{{ dev.allocated_status.type }}{% endif %}</td>
                       <td>{% if dev.physical_status %}{{ dev.physical_status.type }}{% endif %}</td>
-                      <td>{{ dev.updated.strftime('%Y-%m-%d %H:%M:%S')}}</td>
+                      <td>{{ dev.get_updated.strftime('%Y-%m-%d %H:%M:%S')}}</td>
                       <td>{{ dev.created.strftime('%Y-%m-%d %H:%M:%S')}}</td>
                       <td>
                         <a href="{{ dev.public_link }}" target="_blank">
