fix titles of table

--- a/ereuse_devicehub/templates/inventory/erasure_list.html
+++ b/ereuse_devicehub/templates/inventory/erasure_list.html
@@ -31,7 +31,7 @@
                   <li>
                     <a href="javascript:export_file('devices')" class="dropdown-item">
                       <i class="bi bi-file-spreadsheet"></i>
-                      Data Sotrage Spreadsheet
+                      Data Storage Spreadsheet
                     </a>
                   </li>
                   <li>
@@ -50,9 +50,9 @@
                       <th scope="col">Select</th>
                       <th scope="col">Data Storage Serial</th>
                       <th scope="col">Snapshot ID</th>
-                      <th scope="col">Type of erasure</th>
-                      <th scope="col">Phid erasure host</th>
-                      <th scope="col">Reult</th>
+                      <th scope="col">Type of Erasure</th>
+                      <th scope="col">PHID Erasure Host</th>
+                      <th scope="col">Result</th>
                       <th scope="col" data-type="date" data-format="YYYY-MM-DD hh:mm:ss">Time</th>
                       <th scope="col"></th>
                     </tr>
