--- a/ereuse_devicehub/templates/inventory/upload_placeholder.html
+++ b/ereuse_devicehub/templates/inventory/upload_placeholder.html
@@ -82,9 +82,9 @@
                       2 - Download a template accordinng to the format you want to work with.
                     </label>
                     <ul>
-                      <li>Template in <a href="{{ url_for('static', filename='docs/template-upload-placeholder-spreadsheet-devicehub-2.3.0.xlsx') }}">xlsx</a> format.</li>
-                      <li>Template in <a href="{{ url_for('static', filename='docs/template-upload-placeholder-spreadsheet-devicehub-2.3.0.ods') }}">ods</a> format.</li>
-                      <li>Template in <a href="{{ url_for('static', filename='docs/template-upload-placeholder-spreadsheet-devicehub-2.3.0.csv') }}">csv</a> format.</li>
+                      <li>Template in <a href="https://help.usody.com/es/assets/templates/template-upload-placeholder-spreadsheet-devicehub-2.3.0.xlsx">xlsx</a> format.</li>
+                      <li>Template in <a href="https://help.usody.com/es/assets/templates/template-upload-placeholder-spreadsheet-devicehub-2.3.0.ods">ods</a> format.</li>
+                      <li>Template in <a href="https://help.usody.com/es/assets/templates/template-upload-placeholder-spreadsheet-devicehub-2.3.0.csv">csv</a> format.</li>
                     </ul>
                   </div>
                   <div>
