new export actions erasure

--- a/ereuse_devicehub/templates/inventory/erasure_list.html
+++ b/ereuse_devicehub/templates/inventory/erasure_list.html
@@ -29,7 +29,7 @@
                 <span class="d-none" id="exportAlertModal" data-bs-toggle="modal" data-bs-target="#exportErrorModal"></span>
                 <ul class="dropdown-menu" aria-labelledby="btnExport">
                   <li>
-                    <a href="javascript:export_file('devices')" class="dropdown-item">
+                    <a href="javascript:export_file('actions_erasures')" class="dropdown-item">
                       <i class="bi bi-file-spreadsheet"></i>
                       Data Storage Spreadsheet
                     </a>
