details in register

--- a/ereuse_devicehub/templates/ereuse_devicehub/user_registration.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/user_registration.html
@@ -55,7 +55,17 @@
                   </div>
 
                   <div class="col-12">
-                    <button class="btn btn-primary w-100" type="submit">Login</button>
+                    <label for="name" class="form-label">Name</label>
+                    <input name="name" class="form-control" id="name" required>
+                  </div>
+
+                  <div class="col-12">
+                    <label for="telephone" class="form-label">Telephone</label>
+                    <input type="tel" name="telephone" class="form-control" id="telephone" required>
+                  </div>
+
+                  <div class="col-12">
+                    <button class="btn btn-primary w-100" type="submit">Register</button>
                   </div>
                   <div class="col-12">
                     <p class="small mb-0">Don't have account? <a href="#TODO" onclick="$('#exampleModal').modal('show')" data-toggle="modal" data-target="#exampleModal">Create an account</a></p>
