--- a/ereuse_devicehub/templates/labels/print_labels.html
+++ b/ereuse_devicehub/templates/labels/print_labels.html
@@ -153,7 +153,7 @@
                     </div>
                     <div class="form-switch">
                       <input class="form-check-input" name="tags" type="checkbox" id="tagsCheck">
-                      <label class="form-check-label" for="tagsCheck">Tags</label>
+                      <label class="form-check-label" for="tagsCheck">Unique Identifiers</label>
                     </div>
                     <div class="form-switch">
                       <input class="form-check-input" name="serial_number" type="checkbox" id="serialNumberCheck">
