--- a/ereuse_devicehub/templates/inventory/device_create.html
+++ b/ereuse_devicehub/templates/inventory/device_create.html
@@ -90,19 +90,6 @@
                       {% endif %}
                     </div>
 
-                    <div class="form-group mb-2" id="Phid">
-                      <label for="label" class="form-label">{{ form.phid.label }}</label>
-                      {{ form.phid(class_="form-control") }}
-                      <small class="text-muted form-text">Label that you want link to this device</small>
-                      {% if form.phid.errors %}
-                      <p class="text-danger">
-                        {% for error in form.phid.errors %}
-                          {{ error }}<br/>
-                        {% endfor %}
-                      </p>
-                      {% endif %}
-                    </div>
-
                     <div class="form-group mb-2" id="Id_device_supplier">
                       <label for="label" class="form-label">{{ form.id_device_supplier.label }}</label>
                       {{ form.id_device_supplier(class_="form-control") }}
@@ -110,6 +97,19 @@
                       {% if form.id_device_supplier.errors %}
                       <p class="text-danger">
                         {% for error in form.id_device_supplier.errors %}
+                          {{ error }}<br/>
+                        {% endfor %}
+                      </p>
+                      {% endif %}
+                    </div>
+
+                    <div class="form-group mb-2" id="Id_device_internal">
+                      <label for="label" class="form-label">{{ form.id_device_internal.label }}</label>
+                      {{ form.id_device_internal(class_="form-control") }}
+                      <small class="text-muted form-text">Identity of device for the internal</small>
+                      {% if form.id_device_internal.errors %}
+                      <p class="text-danger">
+                        {% for error in form.id_device_internal.errors %}
                           {{ error }}<br/>
                         {% endfor %}
                       </p>
