id internal in device details

--- a/ereuse_devicehub/templates/inventory/device_detail.html
+++ b/ereuse_devicehub/templates/inventory/device_detail.html
@@ -99,6 +99,11 @@
               </div>
 
               <div class="row">
+                <div class="col-lg-3 col-md-4 label ">Id device internal</div>
+                <div class="col-lg-9 col-md-8">{{ placeholder.id_device_internal or '' }}</div>
+              </div>
+
+              <div class="row">
                 <div class="col-lg-3 col-md-4 label ">Type</div>
                 <div class="col-lg-9 col-md-8">{{ placeholder.device.type }}</div>
               </div>
