change type for type upload

--- a/ereuse_devicehub/templates/inventory/placeholder_log_list.html
+++ b/ereuse_devicehub/templates/inventory/placeholder_log_list.html
@@ -27,7 +27,7 @@
                     <tr>
                       <th scope="col">PHID</th>
                       <th scope="col">Placeholder source</th>
-                      <th scope="col">Type</th>
+                      <th scope="col">Type Upload</th>
                       <th scope="col">DHID</th>
                       <th scope="col">Status</th>
                       <th scope="col" data-type="date" data-format="DD-MM-YYYY">Time</th>
