--- a/ereuse_devicehub/templates/inventory/new_transfer.html
+++ b/ereuse_devicehub/templates/inventory/new_transfer.html
@@ -38,7 +38,7 @@
                       <div class="col-12">
                       {% if field != form.type %}
                         {{ field.label(class_="form-label") }}
-                        {% if field == form.code %}
+                        {% if field in [form.code, form.lot_name] %}
                         <span class="text-danger">*</span>
                         {% endif %}
                         {{ field }}
